# solidarity-framework

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI_TOPOGRAPHY.py  NLT-DEV-OTOI.md  PR_REVIEW.md  README.md  REVIEW_SUMMARY.md  SECURITY.md  SUPPORT.md  UNIVERSAL_TRANSFORMATION_COMPLETE.md  file-structure.md  links.md  nltotoi.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.idx/: dev.nix
ISSUE_TEMPLATE/: agent-escalation.md  bug_report.md  config.yml  feature_request.md  governance-proposal.md
SOPs/: incident-response.md  new-agent-onboarding.md  repo-governance-setup.md
agents/: nlt-governance-steward.md  nlt-otoi-skill.md  rrt-advocate-skill.md  sleepwalker-skill.md  solidarity-foundation-skill.md  swe-agent.md
aimybox-voice/: README.md  build.gradle.kts
rrt-advocate/: AGENTS.md  CLAUDE.md  GEMINI_TOPOGRAPHY.py  README.md  pyproject.toml
rrt-advocate/.github/ISSUE_TEMPLATE/: agent-escalation.md  governance-proposal.md
rrt-advocate/.nltotoi/index/: governance-files.md
rrt-advocate/.nltotoi/scripts/: validate-governance.sh
rrt-advocate/config/: crisis_thresholds.yaml
rrt-advocate/docs/: active-threads.md  integration_guide.md
rrt-advocate/docs/agent-log/: README.md
rrt-advocate/src/: rrt_advocate.py
rrt-advocate/src/coordination/: __init__.py
rrt-advocate/src/coordination/supervisor/: __init__.py  supervisor_interface.py
rrt-advocate/src/crisis/: __init__.py
rrt-advocate/src/crisis/assessors/: __init__.py  crisis_assessor.py
rrt-advocate/src/crisis/detectors/: __init__.py  crisis_detector.py
rrt-advocate/src/learning/: __init__.py
rrt-advocate/src/learning/patterns/: __init__.py  pattern_analyzer.py
rrt-advocate/src/response/: __init__.py
rrt-advocate/src/response/de_escalation/: __init__.py  de_escalation_engine.py
rrt-advocate/src/response/interventions/: __init__.py  intervention_manager.py
rrt-advocate/templates/: agent-registration.json  escalation.md  handoff-record.json  intent-log.md
rrt-advocate/tests/: test_rrt_advocate.py
sleepwalker/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  requirements-dev.txt
sleepwalker/examples/: README.md  basic_example.py  crisis_detection.py  sample_toi.yaml  toi_integration.py
sleepwalker/sleepwalker_protocol/: __init__.py  consent.py  continuity.py  protocol.py  state_detection.py  toi_loader.py
sleepwalker/src/: consent.ts  continuity.ts  index.ts  protocol.ts  stateDetection.ts  toiLoader.ts
sleepwalker/tests/: test_consent.py  test_continuity.py  test_protocol.py  test_state_detection.py  test_toi_loader.py
(+103 files in other folders)
