[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrt-advocate"
version = "0.1.0"
description = "Rapid Response Team Advocate orchestration layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NeuroLift Technologies" }]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
