[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepwalker-protocol"
version = "0.1.0"
description = "Emotional Continuity Governance for AI Systems"
readme = "README.md"
authors = [
    {name = "NeuroLift Technologies / HAIEF", email = "haief@neuroliftsolutions.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "emotional-safety", "mental-health", "neurodivergent", "ai-ethics", "trauma-informed"]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/NeuroLift-Technologies/sleepwalker"
Documentation = "https://github.com/NeuroLift-Technologies/sleepwalker#readme"
Repository = "https://github.com/NeuroLift-Technologies/sleepwalker"
Issues = "https://github.com/NeuroLift-Technologies/sleepwalker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sleepwalker_protocol*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sleepwalker_protocol --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
